--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,6 +1,9 @@
 <h2>Questions:</h2>
 <ul>
 <% @questions.each do |question| %>
-  <li><span id ='<%= question.id %>'><a href='/questions/<%= question.id %>'><%= question.title %><a href=''></span></li>
+  <li>
+    <span class='vote-count'><%= question.total_votes %> votes </span>
+    <span id ='<%= question.id %>'><a href='/questions/<%= question.id %>'><%= question.title %></a></span>
+  </li>
 <% end %>
 </ul>
