Correct field types on login page

--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -15,11 +15,11 @@
 
 
   <label for="email">Email_address:</label>
-  <input type="text" name="email" />
+  <input type="email" name="email" />
   <br>
 
   <label for="password">Password:</label>
-  <input type="text" name="password" />
+  <input type="password" name="password" />
   <br>
 
   <input type="submit" value= "Login into your profile">
