Change input type

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -16,7 +16,7 @@
   <br>
 
   <label for="body">Detailed Question:</label>
-  <input type="text" name="body" / >
+  <textarea name="body" rows='10' cols='75'></textarea>
   <br>
 
   <input type="submit" value= "Post">
