--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -27,19 +27,18 @@
 </div>
 
 <div class='answer-container'>
-  <h3><%= @answers.count %> Answers</h3>
-
+  <h3><%= @answers.count %> Answer<% if @answers.count != 1 %>s<% end %></h3>
   <% @answers.each do |answer| %>
-  best = <%= answer.best %>
-
-  <% if @question.is_owner?(current_user.id) %>
-    <form class='best' method='POST' action='/answers'>
-      <input type='hidden' name='_method' value='PUT'>
-      <input type='hidden' name='answer_id' value='<%= answer.id %>'>
-      <input type='hidden' name='question_id' value='<%= @question.id %>'>
-      <button type='submit'>Select as best</button>
-    </form>
-  <% end %>
+    <% if answer.best %>
+      <h4> Best answer:</h4>
+      <% if @question.is_owner?(current_user.id) %>
+      <form class='best' method='POST' action='/answers'>
+        <input type='hidden' name='_method' value='PUT'>
+        <input type='hidden' name='answer_id' value='<%= answer.id %>'>
+        <input type='hidden' name='question_id' value='<%= @question.id %>'>
+        <button type='submit'>Select as best</button>
+      </form>
+    <% end %>
 
     <form class='vote' method='POST' action='/votes'>
       <input type='hidden' name='votable_id' value='<%= answer.id %>'>
@@ -58,6 +57,38 @@
     <% answer.comments.each do |comment| %>
       <%= erb(:'partials/_comment', locals: {comment: comment}) %>
     <% end %>
+    <% end %>
+  <% end %>
+
+  <% @answers.each do |answer| %>
+    <% unless answer.best %>
+      <% if @question.is_owner?(current_user.id) %>
+        <form class='best' method='POST' action='/answers'>
+          <input type='hidden' name='_method' value='PUT'>
+          <input type='hidden' name='answer_id' value='<%= answer.id %>'>
+          <input type='hidden' name='question_id' value='<%= @question.id %>'>
+          <button type='submit'>Select as best</button>
+        </form>
+      <% end %>
+
+      <form class='vote' method='POST' action='/votes'>
+        <input type='hidden' name='votable_id' value='<%= answer.id %>'>
+        <input type='hidden' name='question_id' value='<%= @question.id %>'>
+        <input type='hidden' name='votable_type' value='Answer'>
+        <button type='submit'>Vote!</button>
+      </form>
+      <div class='answer body' id='<%= answer.id %>'>
+        <%= answer.body %>
+      </div>
+      <div class='footer'>
+        <%= answer.votes.count %> votes
+        <%= answer.user.username %> answered this at <%= answer.created_at %>
+      </div>
+      <h4>Comments</h4>
+      <% answer.comments.each do |comment| %>
+        <%= erb(:'partials/_comment', locals: {comment: comment}) %>
+      <% end %>
+    <% end %>
   <% end %>
 </div>
 <% if @errors %>
@@ -67,18 +98,3 @@
   <textarea rows = '5', cols = '75' name='body' placeholder='Answer This Question'></textarea><br>
   <input type='submit' value='Submit'>
 </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
