Add errors message to page

--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -5,7 +5,12 @@
 
 <div class='error_message'>
  <%if @errors %>
-  <p><%= @errors %> </p>
+ There was a problem posting your comment. Please try again.
+  <ul>
+    <% @errors.each do |error| %>
+    <li><%= error %></li>
+    <% end %>
+  </ul>
   <%end%>
 </div>
 
