--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -14,7 +14,7 @@
     <%= @question.user.username %> answered this at <%= @question.created_at %>
   </div>
   <div class='comment_link'>
-    <a href="/questions/<%=@question.id%>/comment/new"> Comment on this question</a>
+    <a href="/questions/<%=@question.id%>/comments/new"> Comment on this question</a>
   </div>
 
   <div class='question comment'>
