--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,8 @@
   <!-- App CSS and JS -->  
   <link rel="stylesheet" href="/css/application.css">
   <script src="/js/application.js"></script>
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet">
 
   <title>Snack Overflow: A Snack-Based Platform</title>
 </head>
