Add rest of body font

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -15,6 +15,7 @@
   <script src="/js/application.js"></script>
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Lily+Script+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lato:300" rel="stylesheet">
 
   <title>Snack Overflow: A Snack-Based Platform</title>
 </head>
@@ -31,7 +32,9 @@
       <li><a href="/questions">Home</a></li>
     </ul>
     <h1>Snack Overflow</h1>
-    <%= yield %>
+    <div class='font'>
+      <%= yield %>
+    </div>
   </div>
 
 </body>
