--- a/public/css/application.css
+++ b/public/css/application.css
@@ -25,8 +25,14 @@
 }
 
 h1 {
-	margin-left: 2em;
+	margin-left: .75em;
+	padding-left: 1em;
 	font-size: 6em;
 	font-family: 'Lily Script One', cursive;
 	border-bottom: 2px solid black;
+}
+
+.font {
+	font-family: 'Lato', sans-serif;
+	font-size: 1.2em;
 }
