--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -16,11 +16,11 @@
   <br>
 
   <label for="email">Email:</label>
-  <input type="text" name="email" / >
+  <input type="email" name="email" / >
   <br>
 
   <label for="password">Password:</label>
-  <input type="text" name="password" />
+  <input type="password" name="password" />
   <br>
 
   <input type="submit" value= "Create profile">
