--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -15,25 +15,31 @@
 </div>
 
 <%if @answer %>
+  <h3>Commenting on:</h3>
+  <div class='answer body' id='<%= @answer.id %>'>
+    <%= @answer.body %>
+  </div>
+  <form action="/questions/<%= @question.id%>/answers/<%=@answer.id%>/comment" method="post">
+    <label for="body">Comment:</label>
+    <textarea name="body" rows='5' cols='75'></textarea>
+    <br>
 
-<form action="/questions/<%= @question.id%>/answers/<%=@answer.id%>/comment" method="post">
-  <label for="body">Comment:</label>
-  <textarea name="body" rows='5' cols='75'></textarea>
-  <br>
+    <input type="submit" value= "Post Comment">
 
-  <input type="submit" value= "Post Comment">
-
-</form>
+  </form>
 
 <%else%>
+  <h3>Commenting on: "<%= @question.title %>"</h3>
+  <div class='question-body'>
+    <%= @question.body %>
+  </div>
+  <form action="/questions/<%= @question.id%>/comment" method="post">
+    <label for="body">Comment:</label>
+    <textarea name="body" rows='5' cols='75'></textarea>
+    <br>
 
-<form action="/questions/<%= @question.id%>/comment" method="post">
-  <label for="body">Comment:</label>
-  <textarea name="body" rows='5' cols='75'></textarea>
-  <br>
+    <input type="submit" value= "Post Comment">
 
-  <input type="submit" value= "Post Comment">
-
-</form>
+  </form>
 
 <%end%>
