--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -1,7 +1,7 @@
 <div class='question-container'>
 
   <h2><%= @question.title %></h2>
-  <form method='POST' action='/votes'>
+  <form class='vote' method='POST' action='/votes'>
     <input type='hidden' name='votable_id' value='<%= @question.id %>'>
     <input type='hidden' name='votable_type' value='Question'>
     <button type='submit'>Vote!</button>
