Change div class name, font, begin padding containers

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -32,7 +32,7 @@
       <li><a href="/questions">Home</a></li>
     </ul>
     <h1>Snack Overflow</h1>
-    <div class='font'>
+    <div class='main'>
       <%= yield %>
     </div>
   </div>
