--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -1,11 +1,12 @@
-<h2>Questions:</h2>
-<ul>
-	<% @questions.each do |question| %>
-	  <li>
-	    <span class='vote-count'><%= question.total_votes %> votes </span>
-	    <span id ='<%= question.id %>'><a href='/questions/<%= question.id %>'><%= question.title %></a></span>
-	  </li>
-	<% end %>
-</ul>
-
+<div class='index-container'>
+	<h2>Questions:</h2>
+	<ul>
+		<% @questions.each do |question| %>
+		  <li>
+		    <span class='vote-count'><%= question.total_votes %> votes  ||  </span>
+		    <span id ='<%= question.id %>'><a href='/questions/<%= question.id %>'><%= question.title %></a></span>
+		  </li>
+		<% end %>
+	</ul>
+</div>
 <a href="/questions/new">Add new question</a>
