--- a/app/views/comments/new.erb
+++ b/app/views/comments/new.erb
@@ -15,7 +15,7 @@
 </div>
 
 <%if @answer %>
-  <h3>Commenting on:</h3>
+  <h3>Commenting on answer written by <%= @answer.user.username %></h3>
   <div class='answer body' id='<%= @answer.id %>'>
     <%= @answer.body %>
   </div>
