Finish homepage, add div

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -10,4 +10,6 @@
 	</ul>
 </div>
 
-<a href="/questions/new">Add new question</a>
+<div class='next_route'>
+	<a href="/questions/new">Add a new question</a>
+</div>
