Remove div, add id to link

--- a/app/views/questions/index.erb
+++ b/app/views/questions/index.erb
@@ -10,6 +10,4 @@
 	</ul>
 </div>
 
-<div class='next_route'>
-	<a href="/questions/new">Add a new question</a>
-</div>
+<a id='new_question' href="/questions/new">Add a new question</a>
