Finish ajaxifying votes on question page

--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -42,7 +42,7 @@
       <%= answer.body %>
     </div>
     <div class='footer'>
-      <span class='Answer-points' id = '<%= answer.id %>'><%= answer.votes.count %> votes</span>
+      <span class='Answer-points' id='<%= answer.id %>'><%= answer.votes.count %> votes</span>
       <%= answer.user.username %> answered this at <%= answer.created_at %>
     </div>
     <h4>Comments</h4>
@@ -72,11 +72,11 @@
         <input type='hidden' name='votable_type' value='Answer'>
         <button type='submit'>Vote!</button>
       </form>
-      <div class='answer body' id='<%= answer.id %>'>
+      <div class='answer body'>
         <%= answer.body %>
       </div>
       <div class='footer'>
-        <span class='Answer-points' id = '<%= answer.id %>'><%= answer.votes.count %> votes</span>
+        <span class='Answer-points' id='<%= answer.id %>'><%= answer.votes.count %> votes</span>
         <%= answer.user.username %> answered this at <%= answer.created_at %>
       </div>
       <h4>Comments</h4>
