--- a/app/views/questions/show.erb
+++ b/app/views/questions/show.erb
@@ -4,7 +4,7 @@
   <form class='vote' method='POST' action='/votes'>
     <input type='hidden' name='votable_id' value='<%= @question.id %>'>
     <input type='hidden' name='votable_type' value='Question'>
-    <button type='submit'>Vote!</button>
+    <button type='submit'>Vote</button>
   </form>
   <div class='question-body'>
     <%= @question.body %>
@@ -13,17 +13,19 @@
     <span class='Question-points' id = '<%= @question.id %>'><%= @question.votes.count %> votes</span>
     <%= @question.user.username %> answered this at <%= @question.created_at %>
   </div>
+
+  <% if @comments %>
+    <div class='question comment'>
+      <h4>Comments</h4>
+      <% @comments.each do |comment| %>
+        <%= erb(:'partials/_comment', locals: {comment: comment}) %>
+      <% end %>
+    </div>
+  <% end %>
+
   <div class='comment_link'>
     <a href="/questions/<%= @question.id %>/comments/new"> Comment on this question</a>
   </div>
-
-  <% if @comments %>
-    <h4>Comments</h4>
-    <% @comments.each do |comment| %>
-      <%= erb(:'partials/_comment', locals: {comment: comment}) %>
-    <% end %>
-  <% end %>
-
 </div>
 
 <div class='answer-container'>
@@ -38,6 +40,14 @@
 
   <% @answers.each do |answer| %>
     <% unless answer.best %>
+      <% if @question.is_owner?(current_user.try(:id)) %>
+        <form class='best' method='POST' action='/answers'>
+          <input type='hidden' name='_method' value='PUT'>
+          <input type='hidden' name='answer_id' value='<%= answer.id %>'>
+          <input type='hidden' name='question_id' value='<%= @question.id %>'>
+          <button type='submit'>Select as best</button>
+        </form>
+      <% end %>
       <%= erb(:'partials/_answer', locals: {answer: answer, question: @question}) %>
     <% end %>
   <% end %>
