--- a/public/css/application.css
+++ b/public/css/application.css
@@ -129,7 +129,7 @@ li {
 .comment_link {
 	display: block;
 	float: right;
-	padding: 10px;
+	padding: 12px;
 }
 
 /* user profile */
@@ -153,7 +153,13 @@ li {
   padding: 5px;
   border-top: 3px solid black;
 }
-
-.answer-container .comment{
-	margin-left: 2%;
+.answer.body{
+	position: relative;
+	top: -31px;
+	margin-left: 5%;
+	padding-bottom: 0;
 }
+/*
+.answer-container .footer{
+	color: red;
+}*/
