--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -7,7 +7,7 @@
 <p>Questions:</p>
 <%@user.questions.all.each do |question|%>
 <ul>
-  <li><a href="/questions/<%=question.id%>"><%=question.title%> - <%=question.created_at %></a></li>
+  <li><a href="/questions/<%=question.id%>"><%=question.title%> - <%=question.created_at.strftime('%D')%></a></li>
 </ul>
 <%end%>
 </div>
@@ -16,7 +16,7 @@
 <p>Questions Answered:</p>
 <%@user.answers.each do |answer|%>
 <ul>
-  <li><a href="/questions/<%=answer.question.id%>"><%=answer.question.title%> - <%=answer.created_at%></a></li>
+  <li><a href="/questions/<%=answer.question.id%>"><%=answer.question.title%> - <%=answer.created_at.strftime('%D')%></a></li>
 </ul>
 <%end%>
 </div>
