--- a/app/views/partials/_comment.erb
+++ b/app/views/partials/_comment.erb
@@ -1,7 +1,7 @@
 <div class='comment' id='<%= comment.id %>'>
   <%= comment.body %>
   <div class='comment footer'>
-    <%= comment.user.username %> wrote this comment at <%= comment.created_at %>
+    <%= comment.user.username %> wrote this comment at <%= comment.created_at.strftime('%D') %>
   </div>
 </div>
 <br>
