Seed typo, add admin, iterate through errors

--- a/app/views/questions/new.erb
+++ b/app/views/questions/new.erb
@@ -4,8 +4,12 @@
 </div>
 
 <div class='error_message'>
- <%if @errors %>
-  <p><%= @errors[-1] %> </p>
+	<%if @errors %>
+	  <ul>
+	    <% @errors.each do |error| %>
+	      <li><%= error %></li>
+	    <%end%>
+	  </ul>
   <%end%>
 </div>
 
