--- a/app/views/partials/_answer.erb
+++ b/app/views/partials/_answer.erb
@@ -2,22 +2,15 @@
   <input type='hidden' name='votable_id' value='<%= answer.id %>'>
   <input type='hidden' name='question_id' value='<%= question.id %>'>
   <input type='hidden' name='votable_type' value='Answer'>
-  <button type='submit'>Vote!</button>
+  <button type='submit'><span class='Answer-points<%= answer.id %>'><%= answer.votes.count %> votes</span></button>
 </form>
 <div class='comment_link'>
   <a href="/questions/<%= question.id %>/answers/<%= answer.id %>/comment/new"> Comment on this answer</a>
 </div>
-
   <p class='answer body'><%= answer.body %></p>
 
-
-<div class='footer'>
-  <span class='Answer-points<%= answer.id %>'><%= answer.votes.count %> votes</span>
-  <%= answer.user.username %> answered this at <%= answer.created_at %>
-</div>
-
 <% if !answer.comments.empty? %>
-  <h4>Comments</h4>
+  <h4>Comments:</h4>
   <% answer.comments.each do |comment| %>
     <%= erb(:'partials/_comment', locals: {comment: comment}) %>
   <% end %>
