Change some colors

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -2,6 +2,7 @@
 
 body {
 	background-color: #ccffcc;
+	color: #3a1a14;
 }
 
 h1 {
@@ -9,7 +10,7 @@ h1 {
 	padding-left: 1em;
 	font-size: 6em;
 	font-family: 'Lily Script One', cursive;
-	border-bottom: 3px double black;
+	border-bottom: 3px double #3a1a14;
 }
 
 h2 {
@@ -24,7 +25,7 @@ body:not(h1), body:not(h2) {
 
 
 a, a:visited {
-	color: black;
+	color: #3a1a14;
 }
 
 a:hover, a:active {
@@ -40,7 +41,7 @@ li {
 }
 
 .vote button {
-	border: 1px solid black;
+	border: 1px solid #3a1a14;
 	padding: 4px;
 	padding-left: 8px;
 	padding-right: 8px;
@@ -49,7 +50,7 @@ li {
 }
 
 input[type=submit]{
-	border: 1px solid black;
+	border: 1px solid #3a1a14;
 	padding: 4px;
 	padding-left: 8px;
 	padding-right: 8px;
@@ -110,7 +111,7 @@ input[type=submit]{
 	margin-top: 50px;
 	margin-left: .75em;
 	padding: 1em;
-	border: 1px solid black;
+	border: 1px solid #3a1a14;
 	max-width: 100%;
 }
 
@@ -119,7 +120,7 @@ input[type=submit]{
 	max-width: 70%;
 	text-align: center;
 	font-size: 3em;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid #3a1a14;
 	margin-bottom: 20px;
 }
 
@@ -143,6 +144,7 @@ input[type=submit]{
 }
 
 .comment_link {
+	margin-top: 2px;
 	display: block;
 	float: right;
 	padding: 12px;
@@ -163,7 +165,7 @@ input[type=submit]{
 
 .answer {
   padding: 5px;
-  border-top: 3px solid black;
+  border-top: 3px solid #3a1a14;
 }
 .answer.body{
 	font-size: 1.25em;
@@ -175,12 +177,12 @@ input[type=submit]{
 }
 
 .answer-container .comment_link{
-		border: 1px solid black;
+		border: 1px solid #3a1a14;
 
 }
 
 .best button {
-	border: 1px solid black;
+	border: 1px solid #3a1a14;
 	padding: 5px;
 	padding-left: 11px;
 	padding-right: 11px;
