--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,7 +10,7 @@
   <!-- JavaScript -->
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  <!-- App CSS and JS -->  
+  <!-- App CSS and JS -->
   <link rel="stylesheet" href="/css/application.css">
   <script src="/js/application.js"></script>
   <!-- Font -->
@@ -32,7 +32,7 @@
       <% end %>
       <li><a href="/questions">Home</a></li>
     </ul>
-    <h1>Snack Overflow</h1>
+    <h1>Snack Overflow <img class='mint-chip' src='/images/mint-chip.png'></h1>
     <div class='main'>
       <%= yield %>
     </div>
