--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -4,25 +4,20 @@
 </div>
 
 <div class='error_message'>
- <%if @errors %>
-  <p><%= @errors %> </p>
-  <%end%>
+  <% if @error %>
+    <p><%= @error %></p>
+  <% end %>
 </div>
-
 
 <form action="/users" method="post">
   <label for="username">User Name:</label>
   <input type="text" name="username" />
   <br>
-
   <label for="email">Email:</label>
   <input type="email" name="email" / >
   <br>
-
   <label for="password">Password:</label>
   <input type="password" name="password" />
   <br>
-
   <input type="submit" value= "Create profile">
-
 </form>
